<resources>
    <string name="app_name">Enigma Poef</string>
    <string name="button_send">Toevoegen aan poef</string>
    <string name="text_login">Log in</string>
    <string name="text_Login_email_hint">Emailadres</string>
    <string name="button_CreateNewAccount">Creëer een nieuw account</string>
    <string name="text_CreateNewAccount">Creëer een nieuw account</string>
    <string name="poef_bekijken">Poef bekijken</string>
    <string name="poef_toevoegen">Poef toevoegen</string>
    <string name="poef_betalen">Poef betalen</string>
    <string name="afmelden">Afmelden</string>
    <string name="Enigmaschild">Enigmaschild</string>
    <string name="password">Paswoord</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id" translatable="false">200155947209616</string>
    <string name="facebook_application_id" translatable="false">200155947209616</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb200155947209616</string>
    <string name="button_SingIn">Aanmelden</string>
    <string name="enter_your_email_addres">Voer hier je email adres in</string>
    <string name="enter_your_password">Voer hier je paswoord in</string>
    <string name="email">Email</string>
    <string name="overzicht_van_aanvraag_tot_poef">Overzicht van aanvraag tot poef</string>
    <string name="betaler">Betaler:</string>
    <string name="tijd">Tijd</string>
    <string name="accept">Accepteren</string>
    <string name="decline">Weigeren</string>
    <string name="gegevens_uit_qr_code">Gegevens uit QR code</string>
    <string name="gegevens_uit_database">Gegevens uit database</string>
    <string name="tijdd">Tijd:</string>
    <string name="naam">Naam:</string>
    <string name="bedrag">Bedrag:</string>
    <string name="reden">Reden:</string>
    <string name="euro">Euro</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="scannen">Scannen</string>
    <string name="qr">QR</string>
    <string name="back">Terug</string>
    <string name="gelieve_email_invullen">Gelieve een emailaddres in te geven.</string>
    <string name="gelieve_wachtwoord_invullen">Gelieve een wachtwoord in te geven.</string>
    <string name="gelieve_aanmeldingsgegevens_invullen">Gelieve de aanmeldingsgegevens in te vullen.</string>
    <string name="aanmeldgegevens_kloppen_niet">De aanmeldingsgegevens kloppen niet.</string>
    <string name="om_te_betalen_bancontact">Om te betalen moet u de Bancontact app geïnstalleerd hebben</string>
    <string name="ik_heb_bancontact">Ik heb de Bancontact app</string>
    <string name="ik_betaal_cash">Ik betaal cash</string>
    <string name="totaal_poef">Totaal: €</string>
    <string name="bent_u_zeker">Bent u zeker dat u €</string>
    <string name="aan_poef_toevoegen">aan uw poef wilt toevoegen?</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="camera_permissie">" U moet toegang tot beide machtigingen toestaan"</string>
    <string name="ok">OK</string>
    <string name="annuleer">Annuleer</string>
    <string name="scan_result">Scan resultaat</string>
    <string name="opnieuw">Opnieuw</string>
    <string name="poef_toegevoegd">Poef toegevoegd</string>
    <string name="u_hebt_net">U hebt net €</string>
    <string name="aan_poef_toegevoegd">aan uw poef toegevoegd</string>

</resources>
